@@ -238,6 +238,10 @@ void	free_result(AGENT_RESULT *result);
 
 int	set_result_type(AGENT_RESULT *result, int value_type, int data_type, char *c);
 
+#ifdef HAVE_KSTAT_H
+zbx_uint64_t	get_kstat_numeric_value(const kstat_named_t *kn);
+#endif
+
 /* external system functions */
 
 int	GET_SENSOR(const char *cmd, const char *param, unsigned flags, AGENT_RESULT *result);
