@@ -738,3 +738,23 @@ void	*get_result_value_by_type(AGENT_RESULT *result, int require_type)
 
 	return NULL;
 }
+
+#ifdef HAVE_KSTAT_H
+zbx_uint64_t	get_kstat_numeric_value(const kstat_named_t *kn)
+{
+	switch (kn->data_type)
+	{
+		case KSTAT_DATA_INT32:
+			return kn->value.i32;
+		case KSTAT_DATA_UINT32:
+			return kn->value.ui32;
+		case KSTAT_DATA_INT64:
+			return kn->value.i64;
+		case KSTAT_DATA_UINT64:
+			return kn->value.ui64;
+		default:
+			THIS_SHOULD_NEVER_HAPPEN;
+			return 0;
+	}
+}
+#endif
